# intermine_cloud

./: .flake8  .gitignore  .readthedocs.yaml  README.md  docker-compose.yml
builder/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  jobbuilder.Dockerfile  prebuilder.Dockerfile  pyproject.toml
builder/src/intermine_builder/: __init__.py  app.py  cli.py  intermine.py  minecompose.py  project_xml.py  properties.py  types.py
compose/: .flake8  Dockerfile  pyproject.toml  wsgi.py
compose/api/: .gitignore  .redocly.yaml  README.md  openapi.yaml  package-lock.json  package.json
compose/api/code_samples/: README.md
compose/api/components/schemas/: 200_response.yaml  401_response.yaml
compose/api/components/schemas/auth/: auth_delete.yaml  auth_post.yaml  auth_put.yaml
compose/api/components/schemas/data/: 200_data_post_response.yaml  200_data_response.yaml  data.yaml  data_delete.yaml  data_post.yaml  data_put.yaml  delete.yaml  post.yaml
compose/api/components/schemas/file/: 200_file_response.yaml  file.yaml  file_put.yaml
compose/api/components/schemas/job/: delete.yaml  job_put.yaml  post.yaml
compose/api/components/schemas/mine/: 200_mine_post_response.yaml  200_mine_response.yaml  delete.yaml  mine.yaml  mine_delete.yaml  mine_post.yaml  mine_put.yaml  post.yaml
compose/api/components/schemas/mine_action/: 200_mine_action_post_response.yaml  200_mine_action_response.yaml  mine_action_delete.yaml  mine_action_post.yaml  mine_action_put.yaml
compose/api/components/schemas/template/: 200_template_post_response.yaml  200_template_response.yaml  delete.yaml  post.yaml  template.yaml  template_delete.yaml  template_post.yaml  template_put.yaml
compose/api/components/schemas/user/: 200_user_response.yaml  user.yaml  user_delete.yaml  user_post.yaml  user_put.yaml
compose/api/paths/: README.md  auth.yaml  data.yaml  file.yaml  job.yaml  mine.yaml  mine_action.yaml  template.yaml  user.yaml
compose/src/compose/: __init__.py
compose/src/compose/auther/: __init__.py
compose/src/compose/blocs/: data.py  file.py  mine.py  mine_action.py  rendered_template.py  template.py
compose/src/compose/cli/: data.py  main.py  mine.py  template.py
compose/src/compose/configs/: __init__.py  compose_default.py  compose_testing.py
compose/src/compose/messenger/: __init__.py  nats_messenger.py
compose/src/compose/models/: __init__.py  data.py  file.py  mine.py  rendered_templates.py  template.py
compose/src/compose/observer/: __init__.py
compose/src/compose/routes/: __init__.py
compose/src/compose/routes/auth/: __init__.py  delete.py  get.py  post.py  put.py
compose/src/compose/routes/data/: __init__.py  get.py  post.py  put.py
compose/src/compose/routes/file/: __init__.py  get.py  put.py
compose/src/compose/routes/mine/: __init__.py  action.py  get.py  post.py
compose/src/compose/routes/template/: __init__.py  delete.py  get.py  post.py  put.py
compose/src/compose/routes/user/: __init__.py  delete.py  get.py  post.py  put.py
compose/src/compose/scheduler/: __init__.py
compose/src/compose/schemas/: data.py  file.py  mine.py  template.py
compose/src/compose/schemas/api/: common.py
compose/src/compose/schemas/api/auth/: __init__.py  post.py  put.py
compose/src/compose/schemas/api/data/: __init__.py  delete.py  get.py  post.py  put.py
compose/src/compose/schemas/api/file/: __init__.py  delete.py  get.py  post.py  put.py
compose/src/compose/schemas/api/mine/: __init__.py  delete.py  get.py  post.py  put.py
compose/src/compose/schemas/api/mine/action/: __init__.py  post.py
compose/src/compose/schemas/api/rendered_template/: __init__.py  delete.py  get.py  post.py  put.py
compose/src/compose/schemas/api/template/: __init__.py  delete.py  get.py  post.py  put.py
compose/src/compose/templater/: cookie_templater.py
compose/src/compose/utils/: auth.py  io.py  template.py
compose/tests/: __init__.py  conftest.py  data_table.tsv  euk_NoLocusTagsORmRNAs.gff  testData.tar  testTemplate.tar
compose/tests/e2e/: __init__.py  test_data_api.py  test_mine_api.py  test_template_api.py
compose/tests/integration/: __init__.py  test_data_flows.py  test_mine_flows.py  test_template_flow.py
compose/tests/unit/: test_data_CRUD.py  test_file_CRUD.py  test_mine_CRUD.py  test_template_CRUD.py
demon/: .flake8  Dockerfile  pyproject.toml
demon/src/demon/: __init__.py
demon/src/demon/blocs/: data.py  file.py  mine.py  template.py
demon/src/demon/cli/: argo.py  data.py  main.py  mine.py  template.py
demon/src/demon/cluster/: __init__.py  argo_cluster.py
demon/src/demon/configs/: __init__.py  demon_default.py
demon/src/demon/observer/: argo_observer.py
demon/src/demon/schemas/: __init__.py  file.py  mine.py  template.py
demon/src/demon/tasks/: __init__.py
demon/src/demon/templater/: __init__.py
demon/src/demon/templates/: minebuilder.yaml.template  minedeployer.yaml.template
demon/src/demon/utils/: template.py
demon/templates/: minebuilder.yaml.template  minedeployer.yaml.template
demon/tests/: event.json
docs/: .flake8  .gitignore  Rahti.md  SETUP.md  conf.py  (+6 more)
iminfra/: .flake8  README.md  pyproject.toml
iminfra/src/iminfra/bootstrap/: tools.py
iminfra/src/iminfra/cli/: bootstrap.py  main.py
iminfra/tests/: test_iminfra.py
maple/: pyproject.toml
maple/src/maple/: __init__.py
maple/src/maple/cli/: main.py
maple/src/maple/configs/: __init__.py
maple/src/maple/schemas/: __init__.py
maple/src/maple/tasks/: __init__.py
minectl/: .flake8  pyproject.toml
minectl/src/minectl/: __init__.py
minectl/src/minectl/cli/: imcloud.py  main.py  mine.py  tools.py
minectl/src/minectl/configs/: __init__.py
minectl/src/minectl/schemas/: __init__.py
minectl/src/minectl/tasks/: __init__.py
minectl/src/minectl/templates/imcloud_kubernetes/: cookiecutter.json
minectl/src/minectl/templates/imcloud_kubernetes/{{cookiecutter.project_name}}/: .flake8  pyproject.toml
minectl/src/minectl/templates/imcloud_kubernetes/{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/cli/: main.py
(+427 files in other folders)
