[tool.poetry]
name = "compose"
version = "0.1.0"
description = "Backend for InterMine Cloud"
authors = ["Ankur Kumar <ank@leoank.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
blackcap = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
