[tool.poetry]
name = "demon"
version = "0.1.0"
description = "Demon for InterMine Cloud"
authors = ["Ankur Kumar <ank@leoank.me>"]
license = "MIT"

include = ["minebuilder.yaml.template", "minedeployer.yaml.template"]

[tool.poetry.dependencies]
python = "^3.8"
blackcap = "^0.41.0"
cookiecutter = "^1.7.3"
minio = "^7.1.1"
tqdm = "^4.62.3"
requests = "^2.26.0"
xdg = "^5.1.1"
Jinja2 = "^3.0.3"
kubernetes = "^19.15.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
pytest-cov = "^2.12.0"
flake8 = "^3.9.2"
black = "^21.5b2"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.4.3"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
mypy = "^0.812"
flake8-annotations = "^2.6.2"
typeguard = "^2.12.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
pre-commit = "^2.13.0"
nox = "^2020.12.31"
factory-boy = "^3.2.0"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
demon = "demon.cli.main:main"

[build-system]
requires = ["poetry-core>=1.1.10"]
build-backend = "poetry.core.masonry.api"
