[tool.poetry]
name = "iminfra"
version = "0.1.0"
description = "Intermine infrastructure as code."
authors = ["Ankur Kumar <ank@leoank.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pulumi = "^3.24.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
pytest-cov = "^2.12.0"
flake8 = "^3.9.2"
black = "^21.5b2"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.4.3"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
mypy = "^0.812"
flake8-annotations = "^2.6.2"
typeguard = "^2.12.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
pre-commit = "^2.13.0"
nox = "^2020.12.31"
factory-boy = "^3.2.0"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
iminfra = "iminfra.cli.main:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
